--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
     <h1>Temperatures:</h1>
 
+    <h3 id='status'>status:</h3>
+
     <ul id='temperature-list'>  </ul>
 
-    
+
 
     <!-- <form action="">
       <input id="temperature-form" autocomplete="off" /><button>log temp</button>
@@ -30,6 +32,10 @@
 
       socket.on('temperature-logged', function (temp) {
         $('#temperature-list').prepend($('<li>').text(temp));
+      });
+
+      socket.on('temperature-too-high', function (message) {
+        $('#status').append($('<p>').text('temp is above 80!'));
       });
 
       // $('form').submit(function () {
