Add event on 'temperature-too-high' - change 'temperature-list' color.
modified:   dataMock.js
modified:   index.html
modified:   index.js
modified:   junk.js
new file:   scratch/dataMock-01.js

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
       socket.on('temperature-too-high', function (message) {
         $('#status').append($('<p>').text('temp is above 80!'));
+        $('#temperature-list').css({'color': 'red'});
       });
 
       // $('form').submit(function () {
