--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
   <head>
     <meta charset="utf-8">
     <title>synthesis-mock</title>
+    <!-- <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8"> -->
+    <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8">
+
   </head>
 
   <body>
 
-    <h1>Temperatures:</h1>
+    <h1>Air Temperature:</h1>
 
-    <h3 id='status'>status:</h3>
+    <h3 id='status'>status: green</h3>
+    <h4 id='messages'></h4>
 
     <ul id='temperature-list'>  </ul>
+
 
 
 
@@ -35,8 +40,9 @@
       });
 
       socket.on('temperature-too-high', function (message) {
-        $('#status').append($('<p>').text('temp is above 80!'));
+        $('#status').text("status:  Air Temperature is above 80!").css({'color': 'red'});
         $('#temperature-list').css({'color': 'red'});
+        $('#messages').text('text sent: Air Temperature is above 80!');
       });
 
       // $('form').submit(function () {
