--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
       <div class="box-inner">
         <h2>Air Temperature</h2>
 
+        <h1 id='temperature-display'>  </h1>
+
         <h3 id='status'>status: ok</h3>
 
         <h4 id='messages'></h4>
-
-        <ul id='temperature-list'>  </ul>
       </div>
 
     </div>
