Update 'index.html' with additional boxes for 'Air' section.
modified:   public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <div class="box">
-      <h1>Air</h1>
+      <!-- <h1>Air</h1> -->
 
       <div class="box-inner">
         <h2>Air Temperature</h2>
@@ -22,6 +22,19 @@
 
         <h4 id='messages'></h4>
       </div>
+
+
+      <div class="box-inner">
+        <h2>Air Humidity</h2>
+      </div>
+
+
+      <div class="box-inner">
+        <h2>Air CO2</h2>
+      </div>
+
+
+
 
     </div>
 
