--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
 
         <h3 id='status'>status: ok</h3>
 
+        <h3 id='fanCooling-status'></h3>
+
         <h4 id='messages'></h4>
       </div>
 
