--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Six+Caps|Work+Sans:100,200,900' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <title>synthesis-mock</title>
     <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8">
@@ -10,20 +11,27 @@
 
   <body>
 
+    <div id="synthesis-logo">
+      <img class="opacity" src="/img/synthesis-logo.svg" alt="synthesis logo" />
+    </div>
+
     <div class="box">
       <!-- <h1>Air</h1> -->
 
+
       <div class="box-inner">
+
+        <div id="air-temperature-box">
+          <h1 id='temperature-display'></h1>
+        </div>
+
         <h2>Air Temperature</h2>
 
-        <h1 id='temperature-display'>  </h1>
-
         <h3 id='status'>status: ok</h3>
-
         <h3 id='fanCooling-status'></h3>
         <h3 id='fanHeating-status'></h3>
+        <h3 id='messages'></h3>
 
-        <h4 id='messages'></h4>
       </div>
 
 
@@ -35,6 +43,12 @@
       <div class="box-inner">
         <h2>Air CO2</h2>
         <h3 id='co2Servo-status'></h3>
+      </div>
+
+
+      <div class="box-inner">
+        <h2>messages</h2>
+        <h3 id='air-messages'></h3>
       </div>
 
 
