Update 'messages' section. Update 'style.css'
modified:   client/client.js
modified:   public/css/styles.css
modified:   public/index.html
modified:   public/main.bundle.js

--- a/public/index.html
+++ b/public/index.html
@@ -16,22 +16,17 @@
     </div>
 
     <div class="box">
-      <!-- <h1>Air</h1> -->
-
+      <!-- <h2>Air</h2> -->
 
       <div class="box-inner">
-
-        <div id="air-temperature-box">
+        <div id="temperature-display-box">
           <h1 id='temperature-display'></h1>
         </div>
 
         <h2>Air Temperature</h2>
-
-        <h3 id='status'>status: ok</h3>
+        <h3 id='status'></h3>
         <h3 id='fanCooling-status'></h3>
         <h3 id='fanHeating-status'></h3>
-        <h3 id='messages'></h3>
-
       </div>
 
 
@@ -50,8 +45,6 @@
         <h2>messages</h2>
         <h3 id='air-messages'></h3>
       </div>
-
-
 
 
     </div>
