--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@
 
 
       <div class="box-inner">
+        <div id="co2-display-box">
+          <h1 id='co2-display'></h1>
+        </div>
+
         <h2>Air CO2</h2>
         <h3 id='co2Servo-status'></h3>
       </div>
